--- a/Dignify/Dignify.Android/Properties/AndroidManifest.xml
+++ b/Dignify/Dignify.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Dignify" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="28" />
+	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="22" />
 	<application android:label="Dignify.Android">
-    <uses-library android:name="org.apache.http.legacy" android:required="false" />
+		<uses-library android:name="org.apache.http.legacy" android:required="false" />
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCNTBVdRlI3m-qgKTmZwKMulq5FJEMmQ9U" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
