--- a/Dignify/Dignify.iOS/Info.plist
+++ b/Dignify/Dignify.iOS/Info.plist
@@ -37,6 +37,12 @@
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImages.launchimage</string>
 	<key>CFBundleDocumentTypes</key>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Can we use your location to find nearby resources? (Your location will not be stored)</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Can we use your location when your app is being used to find nearby resources? (Your location will not be stored)</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Can we use your location to find nearby resources? (Your location will not be stored)</string>
 	<array>
 		<dict>
 			<key>CFBundleTypeName</key>
